--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
       <header>
         <h1>Nian (Oakley) Liu</h1>
         <p>Master of Computer Science<br>Beijing University of Posts and Telecommunications</p>
-    <h3><a href="https://nianliu.github.io/">Home</a></h3>
-        <h3><a href="https://nianliu.github.io/research.html">Research</a></h3>
-    <h3><a href="https://nianliu.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://nianliu.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://nianliu.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://nianliu.github.io/personal.html">Personal</a></h3>
+    <h3><a href="https://oakley_liun.github.io/">Home</a></h3>
+        <h3><a href="https://oakley_liun.github.io/research.html">Research</a></h3>
+    <h3><a href="https://oakley_liun.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://oakley_liun.github.io/code.html">Code</a></h3> 
+        <h3><a href="https://oakley_liun.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://oakley_liun.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:oakley.liun@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
