--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Computer Science<br>Beijing University of Posts and Telecommunications<brWest TuCheng Road 10<br>>Beijing haidian district， China</p>
+    <p><b>Contact:</b><br>Department of Computer Science<br>Beijing University of Posts and Telecommunications<brWest TuCheng Road 10<br>Beijing haidian district, China</p>
     <p>Post: 100876</p>
     <p>Tele: +86 13041092011</p>
       </header>
