--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <p><b>Contact:</b><br>Department of Computer Science<br>Beijing University of Posts and Telecommunications<br>West TuCheng Road 10<br>Beijing haidian district, China</p>
     <p><b>Post</b>: 100876</p>
-    <p><b>Tele</b>: +86 13041092011</p>
+    <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
       <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
