--- a/research.html
+++ b/research.html
@@ -111,28 +111,27 @@
       <section>
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/CollegeDropout2016May31.pdf">College Attrition and the Dynamics of Information Revelation</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>, <a href="https://sites.google.com/site/estebanmaucejo/">Esteban Aucejo</a>, and <a href="http://www.amaurel.net/">Arnaud Maurel</a> <br> <b>R &amp; R, <i>Journal of Political Economy</i></b> (updated May 31, 2016) <br><button class="accordion">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This paper investigates the role played by informational frictions in college and the workplace. We estimate a dynamic structural model of schooling and work decisions, where individuals have imperfect information about their schooling ability and labor market productivity. We take into account the heterogeneity in schooling investments by distinguishing between two- and four-year colleges, graduate school, as well as science and non-science majors for four-year colleges. Individuals may also choose whether to work full-time, part-time, or not at all. A key feature of our approach is to account for correlated learning through college grades and wages, whereby individuals may leave or re-enter college as a result of the arrival of new information on their ability and productivity. Our findings indicate that the elimination of informational frictions would increase the college graduation rate by 9 percentage points, and would increase the college wage premium by 32.7 percentage points through increased sorting on ability. </p></div>
-    <p style="margin:0"><button class="accordion">
-      Other versions
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="http://www.nber.org/papers/w22325">NBER Working Paper No. 22325</a> (June 2016) </p></div><br>
-
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/racialpref.pdf">What the Students for Fair Admissions Cases Reveal About Racial Preferences</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a> and <a href="http://www.terry.uga.edu/directory/economics/josh-kinsler">Josh Kinsler</a> <br> <b>R &amp; R, <i>Journal of Political Economy Microeconomics</i></b> (updated April 15, 2022) <br><button class="accordion"> 
-    Abstract
-    </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Using detailed admissions data made public in the <i>SFFA v. Harvard</i> and <i>SFFA v. UNC</i> cases, we examine how racial preferences for under-represented minorities (URMs) affect their admissions to Harvard and UNC-Chapel Hill. At Harvard, the admit rates for typical African American applicants are on average over four times larger than if they had been treated as white. For typical Hispanic applicants the increase is 2.4 times. At UNC, preferences vary substantially by whether the applicant is in-state or out-of-state. For in-state applicants, racial preferences result in an over 70% increase in the African American admit rate. For out-of-state applicants, the increase is more than tenfold. Both universities provide larger racial preferences to URMs from higher socioeconomic backgrounds. </p></div>
-    <p style="margin:0"><button class="accordion">
-      Other versions
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <br> <a href="http://www.nber.org/papers/w29964">NBER Working Paper No. 29964</a> (April 2022) <br> <a href="https://www.iza.org/publications/dp/15240/what-the-students-for-fair-admissions-cases-reveal-about-racial-preferences">IZA Discussion Paper No. 15240</a> (April 2022) </p></div>
-    <p style="margin:0"><button class="accordion">
-      Video presentation
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <br> <a href="https://www.youtube.com/watch?v=D9gMyiAEtus">Hoover Institution</a> </p></div>
-<!--
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Heterogeneous graph neural networks (HGNNs) as an emerging technique have shown superior capacity of dealing with
+heterogeneous information network (HIN). However, most HGNNs follow a semi-supervised learning manner, which notably limits their
+wide use in reality since labels are usually scarce in real applications. Recently, contrastive learning, a self-supervised method, becomes
+one of the most exciting learning paradigms and shows great potential when there are no labels. In this paper, we study the problem
+of self-supervised HGNNs and propose a novel co-contrastive learning mechanism for HGNNs, named HeCo. Different from traditional
+contrastive learning which only focuses on contrasting positive and negative samples, HeCo employs cross-view contrastive mechanism.
+Specifically, two views of a HIN (network schema and meta-path views) are proposed to learn node embeddings, so as to capture both
+of local and high-order structures simultaneously. Then the cross-view contrastive learning, as well as a view mask mechanism, is
+proposed, which is able to extract the positive and negative embeddings from two views. This enables the two views to collaboratively
+supervise each other and finally learn high-level node embeddings. Moreover, to further boost the performance of HeCo, two additional
+methods are designed to generate harder negative samples with high quality. The essence of HeCo is to make positive samples from
+different views close to each other by cross-view contrast, and learn the factors invariant to two proposed views. However, besides
+the invariant factors, view-specific factors complementally provide the diverse structure information between different nodes, which also
+should be contained into the final embeddings. Therefore, we need to further explore each view independently and propose a modified
+model, called HeCo++. Specifically, HeCo++ conducts hierarchical contrastive learning, including cross-view and intra-view contrasts,
+which aims to enhance the mining of respective structures. Extensive experiments conducted on a variety of real-world networks show
+the superior performance of the proposed methods over the state-of-the-arts. </p></div>
+    <!--
     <p style="margin:0"><button class="accordion">
       Online Appendix
     </button>
