--- a/research.html
+++ b/research.html
@@ -127,6 +127,13 @@ model, called HeCo++. Specifically, HeCo++ conducts hierarchical contrastive lea
 which aims to enhance the mining of respective structures. Extensive experiments conducted on a variety of real-world networks show
 the superior performance of the proposed methods over the state-of-the-arts. </p></div>
     
+    <p style="margin:0"><button class="accordion">
+      Abstract
+    </button>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
+information also should be explored by intra-view contrast.
+</p></div>
+    
     <hr>
 
     <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Papers</h2>
