--- a/research.html
+++ b/research.html
@@ -107,6 +107,12 @@
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br><button class="accordion">
+      Overview
+    </button>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
+information also should be explored by intra-view contrast.
+</p></div>
+    <p style="margin:0"><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Heterogeneous graph neural networks (HGNNs) as an emerging technique have shown superior capacity of dealing with
@@ -126,13 +132,6 @@ should be contained into the final embeddings. Therefore, we need to further exp
 model, called HeCo++. Specifically, HeCo++ conducts hierarchical contrastive learning, including cross-view and intra-view contrasts,
 which aims to enhance the mining of respective structures. Extensive experiments conducted on a variety of real-world networks show
 the superior performance of the proposed methods over the state-of-the-arts. </p></div>
-    
-    <p style="margin:0"><button class="accordion">
-      Abstract
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
-information also should be explored by intra-view contrast.
-</p></div>
     
     <hr>
 
