--- a/research.html
+++ b/research.html
@@ -106,7 +106,7 @@
       <section>
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br><button class="accordion">
+    <p style="text-align:justify"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br><button class="accordion">
       Overview
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
