--- a/research.html
+++ b/research.html
@@ -110,8 +110,7 @@
       Overview
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
-information also should be explored by intra-view contrast.
-</p></div>
+information also should be explored by intra-view contrast.</p></div>
     <p style="margin:0"><button class="accordion">
       Abstract
     </button>
