--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
     <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
-      <p style="text-align:center">
-      <h3><img src="identification.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></h3></p>
+      <p style="text-align: center;"><img src="identification.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></p>
       <p>I am currently an Associate Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
       </section>
