--- a/research.html
+++ b/research.html
@@ -105,8 +105,8 @@
       </header>
       <section>
 
-    <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
+    <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision</h2>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="./research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
     <p style="text-align: center;"><img src="./research/model_heco_.PNG" height="250" width="400"></p>
     <p style="margin:0"><button class="accordion">
       Overview
@@ -141,24 +141,48 @@ the superior performance of the proposed methods over the state-of-the-arts. </p
 
     <hr>
 
-    <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.3368/jhr.0421-11641R1">Divergent: The Time Path of Legacy and Athlete Admissions at Harvard</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a> and <a href="http://www.terry.uga.edu/directory/economics/josh-kinsler">Josh Kinsler</a> <br> <i>Journal of Human Resources</i>, Forthcoming. <br><button class="accordion"> 
+    <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2210.02330">Revisiting Graph Contrastive Learning from the Perspective of Graph Spectrum</a> <br>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Deyu Bo, <a href="http://shichuan.org/">Chuan Shi</a>, <a href="https://ece.duke.edu/faculty/jian-pei">Jian Pei</a><br> <i>Advances in neural information processing systems</i> <b>(NeurIPS)</b>, 2022<br>
+    <p style="text-align: center;"><img src="./research/model_spco.PNG" height="250" width="400"></p>
+    <p style="margin:0"><button class="accordion"> 
+    Overview   
+    </button>   
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This is the first attempt to fundamentally explore the augmentation strategies for GCL from spectral 
+domain. We not only reveal the general graph augmentation rule behind different augmentation, but also 
+explain why GCL works by proposing the contrastive invariance theorem. Our work provides deeper 
+understanding on the nature of GCL.</p></div>
+    <p style="margin:0"><button class="accordion"> 
     Abstract   
     </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> We examine how increased admissions competition at elite US colleges has affected the admissions advantage that legacies and athletes (LA) receive. Using 18 years of Harvard admissions data, we show that non-legacy, non-athlete (NLNA) applications expanded while LA applications remained flat. Yet, the share of LA admits remained stable, implying substantial <i>increases</i> in LA admissions advantages. These facts imply a strong degree of complementarity in the number of LA admits and overall admit quality. If the admissions advantages for LA applicants had been constant throughout this period, there would have been a large increase in the number of minority admits. </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
+Graph Contrastive Learning (GCL), learning the node representations by augmenting graphs, has attracted considerable attentions. Despite the proliferation of
+various graph augmentation strategies, some fundamental questions still remain
+unclear: what information is essentially encoded into the learned representations
+by GCL? Are there some general graph augmentation rules behind different augmentations? If so, what are they and what insights can they bring? In this paper,
+we answer these questions by establishing the connection between GCL and graph
+spectrum. By an experimental investigation in spectral domain, we firstly find
+the General grAph augMEntation (GAME) rule for GCL, i.e., the difference of
+the high-frequency parts between two augmented graphs should be larger than
+that of low-frequency parts. This rule reveals the fundamental principle to revisit
+the current graph augmentations and design new effective graph augmentations.
+Then we theoretically prove that GCL is able to learn the invariance information
+by contrastive invariance theorem, together with our GAME rule, for the first
+time, we uncover that the learned representations by GCL essentially encode the
+low-frequency information, which explains why GCL works. Guided by this
+rule, we propose a spectral graph contrastive learning module (SpCo1
+), which is
+a general and GCL-friendly plug-in. We combine it with different existing GCL
+models, and extensive experiments well demonstrate that it can further improve the
+performances of a wide variety of different GCL methods.</p></div>
     <p style="margin:0"><button class="accordion">
-      Online Appendix
+      Poster
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://tyleransom.github.io/research/DivergentOnlineAppendix.pdf">Online Appendix</a> </p></div>
     <p style="margin:0"><button class="accordion">
-      Replication files
+      Vedio
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://github.com/tyleransom/Divergent-JHR/releases/tag/v1.0">Data &amp; code for replication</a> <br> <a href="https://doi.org/10.5281/zenodo.5764855"><img src="https://zenodo.org/badge/435621674.svg" alt="DOI"></a> </p></div>
-    <p style="margin:0"><button class="accordion">
-      Other versions
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://tyleransom.github.io/research/divergent.pdf">Accepted version</a> (December 2021) <br> <a href="http://www.nber.org/papers/w26315">NBER Working Paper No. 26315</a> (September 2019) <br> <a href="https://www.iza.org/publications/dp/12634/divergent-the-time-path-of-legacy-and-athlete-admissions-at-harvard">IZA Discussion Paper No. 12634</a> <br> <a href="https://hceconomics.uchicago.edu/research/working-paper/divergent-time-path-legacy-and-athlete-admissions-harvard">HCEO Working Paper No. 2019-081</a> (December 2019) </p></div><br>
-
+    
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.jeconom.2020.07.056">Understanding Migration Aversion using Elicited Counterfactual Choice Probabilities</a> <br> with <a href="https://www.newyorkfed.org/research/economists/kosar/index.html">Gizem Ko&#351;ar</a> and <a href="https://www.newyorkfed.org/research/economists/vanderklaauw/index.html">Wilbert van der Klaauw</a> <br> <i>Journal of Econometrics</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
     </button>
