--- a/research.html
+++ b/research.html
@@ -108,11 +108,8 @@
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="./research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
     <p style="text-align: center;"><img src="./research/model_heco_.PNG" height="250" width="400"></p>
-    <p style="margin:0"><button class="accordion">
-      Overview
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
-information also should be explored by intra-view contrast.</p></div>
+    <p style="margin:0"> <b>Overview</b>: This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
+information also should be explored by intra-view contrast. </p>
     <p style="margin:0"><button class="accordion">
       Abstract
     </button>
@@ -144,13 +141,10 @@ the superior performance of the proposed methods over the state-of-the-arts. </p
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2210.02330">Revisiting Graph Contrastive Learning from the Perspective of Graph Spectrum</a> <br>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Deyu Bo, <a href="http://shichuan.org/">Chuan Shi</a>, <a href="https://ece.duke.edu/faculty/jian-pei">Jian Pei</a><br> <i>Advances in neural information processing systems</i> <b>(NeurIPS)</b>, 2022<br>
     <p style="margin:0"><img src="./research/model_spco.PNG" height="200" width="500"></p>
-    <p style="margin:0"><button class="accordion"> 
-    Overview   
-    </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This is the first attempt to fundamentally explore the augmentation strategies for GCL from spectral 
+    <p style="margin:0"> <b>Overview</b>: This is the first attempt to fundamentally explore the augmentation strategies for GCL from spectral 
 domain. We not only reveal the general graph augmentation rule behind different augmentation, but also 
 explain why GCL works by proposing the contrastive invariance theorem. Our work provides deeper 
-understanding on the nature of GCL.</p></div>
+understanding on the nature of GCL.</p> 
     <p style="margin:0"><button class="accordion"> 
     Abstract   
     </button>   
@@ -177,11 +171,11 @@ performances of a wide variety of different GCL methods.</p></div>
     <p style="margin:0"><button class="accordion">
       Poster
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://tyleransom.github.io/research/DivergentOnlineAppendix.pdf">Online Appendix</a> </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div>
     <p style="margin:0"><button class="accordion">
       Vedio
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://github.com/tyleransom/Divergent-JHR/releases/tag/v1.0">Data &amp; code for replication</a> <br> <a href="https://doi.org/10.5281/zenodo.5764855"><img src="https://zenodo.org/badge/435621674.svg" alt="DOI"></a> </p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div><br>
     
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.jeconom.2020.07.056">Understanding Migration Aversion using Elicited Counterfactual Choice Probabilities</a> <br> with <a href="https://www.newyorkfed.org/research/economists/kosar/index.html">Gizem Ko&#351;ar</a> and <a href="https://www.newyorkfed.org/research/economists/vanderklaauw/index.html">Wilbert van der Klaauw</a> <br> <i>Journal of Econometrics</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
