--- a/research.html
+++ b/research.html
@@ -178,10 +178,10 @@ performances of a wide variety of different GCL methods.</p></div>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div><br>
     
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2201.05540">Compact Graph Structure Learning via Mutual Information Compression</a> <br><b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/">Lingfei Wu</a>, <a href="http://academic.hugochan.net/">Yu Chen</a>, <a href="https://sites.google.com/view/xiaojie-guo-personal-site">Xiaojie Guo</a>, <a href="http://shichuan.org/">Chuan Shi</a><br> <i>International World Wide Web Conference</i> <b>(TheWebConf)</b>, 2022 <br>
-    <p style="margin:0"><img src="./research/model_cogsl.PNG" height="200" width="500"></p>
+    <p style="margin:0"><img src="./research/model_cogsl.png" height="200" width="500"></p>
     <p style="margin:0"> <b>Overview</b>:  In this paper, we are the first to define the “optimal graph structure” in principle by Information 
 theory, which can achieve effectiveness and robustness simultaneously.</p> 
-    <button class="accordion"> 
+    <p style="margin:0"><button class="accordion"> 
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>Graph Structure Learning (GSL) recently has attracted considerable
