--- a/research.html
+++ b/research.html
@@ -106,7 +106,7 @@
       <section>
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="./research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="./research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Authors</b>: <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, Hui Han, <a href="http://shichuan.org/">Chuan Shi</a> <br> <b>Journal</b>: <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
     <p style="text-align: center;"><img src="./research/model_heco_.PNG" height="250" width="400"></p>
     <p style="margin:0"> <b>Overview</b>: This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
 information also should be explored by intra-view contrast. </p>
@@ -139,7 +139,7 @@ the superior performance of the proposed methods over the state-of-the-arts. </p
     <hr>
 
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2210.02330">Revisiting Graph Contrastive Learning from the Perspective of Graph Spectrum</a> <br><b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <a href="https://scholar.google.com/citations?user=m4rsQCAAAAAJ&hl=zh-CN">Deyu Bo</a>, <a href="http://shichuan.org/">Chuan Shi</a>, <a href="https://ece.duke.edu/faculty/jian-pei">Jian Pei</a><br> <i>Advances in neural information processing systems</i> <b>(NeurIPS)</b>, 2022<br>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2210.02330">Revisiting Graph Contrastive Learning from the Perspective of Graph Spectrum</a> <br> <b>Authors</b>: <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <a href="https://scholar.google.com/citations?user=m4rsQCAAAAAJ&hl=zh-CN">Deyu Bo</a>, <a href="http://shichuan.org/">Chuan Shi</a>, <a href="https://ece.duke.edu/faculty/jian-pei">Jian Pei</a><br> <b>Conference</b>: <i>Advances in neural information processing systems</i> <b>(NeurIPS)</b>, 2022<br>
     <p style="margin:0"><img src="./research/model_spco.PNG" height="200" width="500"></p>
     <p style="margin:0"> <b>Overview</b>: This is the first attempt to fundamentally explore the augmentation strategies for GCL from spectral 
 domain. We not only reveal the general graph augmentation rule behind different augmentation, but also 
@@ -177,7 +177,7 @@ performances of a wide variety of different GCL methods.</p></div>
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div><br>
     
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2201.05540">Compact Graph Structure Learning via Mutual Information Compression</a> <br><b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/">Lingfei Wu</a>, <a href="http://academic.hugochan.net/">Yu Chen</a>, <a href="https://sites.google.com/view/xiaojie-guo-personal-site">Xiaojie Guo</a>, <a href="http://shichuan.org/">Chuan Shi</a><br> <i>International World Wide Web Conference</i> <b>(TheWebConf)</b>, 2022 <br>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2201.05540">Compact Graph Structure Learning via Mutual Information Compression</a> <br> <b>Authors</b>: <b>Nian Liu</b>, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/">Lingfei Wu</a>, <a href="http://academic.hugochan.net/">Yu Chen</a>, <a href="https://sites.google.com/view/xiaojie-guo-personal-site">Xiaojie Guo</a>, <a href="http://shichuan.org/">Chuan Shi</a><br> <b>Conference</b>: <i>International World Wide Web Conference</i> <b>(TheWebConf)</b>, 2022 <br>
     <p style="margin:0"><img src="./research/model_cogsl.png" height="200" width="500"></p>
     <p style="margin:0"> <b>Overview</b>:  In this paper, we are the first to define the “optimal graph structure” in principle by Information 
 theory, which can achieve effectiveness and robustness simultaneously.</p> 
