--- a/research.html
+++ b/research.html
@@ -225,15 +225,11 @@ PaperDigest, this paper is one of the most influential paper in KDD 2021 as for 
     <p style="margin:0"><button class="accordion">
       Poster
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="./research/poster_heco.png">Online Presentation</a></p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="./research/poster_heco.pdf">Poster</a></p></div>
     <p style="margin:0"><button class="accordion">
       Vedio
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://dl.acm.org/doi/10.1145/3447548.3467415">Online Presentation</a></p></div>
-     <p style="margin:0"><button class="accordion">
-      Slide
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="./research/slide_heco.pdf">Slide</a></p></div><br>
     
     
     <hr>
