--- a/research.html
+++ b/research.html
@@ -195,7 +195,7 @@ PaperDigest, this paper is one of the most influential paper in KDD 2021 as for 
     <p style="margin:0"><button class="accordion">
       Vedio
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://dl.acm.org/doi/10.1145/3447548.3467415">Online Presentation</a></p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://dl.acm.org/doi/10.1145/3447548.3467415">Online Presentation</a></p></div><br>
     
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://dl.acm.org/doi/10.1145/3468674">Embedding Heterogeneous Information Network in Hyperbolic Spaces</a> <br> <b>Authors</b>: Yiding Zhang, <a href="https://wangxiaocs.github.io/">Xiao Wang</a>, <b>Nian Liu</b>, <a href="http://shichuan.org/">Chuan Shi</a> <br><b>Journal</b>: <i>ACM Transactions on Knowledge Discovery from Data</i> <b>(ACM TKDD)</b>, 2021<br>
     <p style="margin:0"> <b>Overview</b>:  We are the first to explore HIN embedding in hyperbolic spaces, naturally capture the hierarchical 
