--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h1>Nian (Oakley) Liu</h1>
         <p>Master of Computer Science<br>Beijing University of Posts and Telecommunications</p>
     <h3><a href="https://liun-online.github.io/">Home</a></h3>
-        <h3><a href="https://liun-online.github.io/research.html">Research</a></h3>
+        <h3><a href="https://liun-online.github.io/research.html">Publications</a></h3>
     <h3><a href="https://liun-online.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://liun-online.github.io/code.html">Code</a></h3> 
         <h3><a href="https://liun-online.github.io/teaching.html">Teaching</a></h3> 
