--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
-      <p style="text-align: center;"><img src="identification.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></p>
+      <p style="text-align: center;"><img src="identifications.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></p>
       <p>I am currently a M.S. in Computer Science in <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. I graduated with a B.S. in Electronics Science and Technology in BUPT in Jun. 2020.</p>
       <p>My research interests include graph neural network, graph self-supervised learning, graph contrastive learning.</p>
       </section>
