--- a/personal.html
+++ b/personal.html
@@ -102,8 +102,8 @@
     <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
-      <h3>About me</h3>
-      <p>When I am not working, I am helping my wife raise our children, volunteering at my church (the <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ of Latter-day Saints</a>) as a financial clerk, cooking, reading books, listening to books and podcasts, tweeting, or (very occasionally) <a href="https://medium.com/@tyleransom">blogging</a>. I am an advocate of <a href="https://en.wikipedia.org/wiki/Intermittent_fasting">intermittent fasting</a> and low-carbohydrate dieting. I am a LaTeX enthusiast and enjoy following sports and doing sports analytics for fun. My favorite teams are: BYU, OU, Chelsea FC, Duke, and the Utah Jazz.</p>
+      <h2>Education</h2>
+      <p style=style="margin:0"><b>M.S. in Computer Science</b>  Sep. 2020 – Jun. 2023<br><i>Beijing University of Posts and Telecommunications</i></p>
       
       <hr />
       <h3>Recent books I've read and highly recommend</h3>
