--- a/personal.html
+++ b/personal.html
@@ -102,8 +102,19 @@
     <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
-      <h2>Education</h2>
-      <p style=style="margin:0"><b>M.S. in Computer Science</b>  Sep. 2020 – Jun. 2023<br><i>Beijing University of Posts and Telecommunications</i></p>
+      <h1>Education</h1><br>
+      <p style=style="margin:0"><b>M.S. in Computer Science</b>  Sep. 2020 – Jun. 2023<br><i>Beijing University of Posts and Telecommunications</i></p><br>
+      <ul style="list-style-type:square">
+         <li>GPA: 3.64 / 4.0; Score: 86.75 / 100</li>
+         <li>I achieved Master of Science majored in computer science in BUPT advised by Prof. Chuan Shi and Xiao Wang 
+working on graph neural network, graph self-supervised learning, from theory, model to application.
+</li>
+      </ul><br>
+      <p style=style="margin:0"><b>B.S. in Electronics Science and Technology</b>  Sep. 2016 – Jun. 2020<br><i>Beijing University of Posts and Telecommunications</i></p><br>
+      <ul style="list-style-type:square">
+         <li>GPA: 3.69 / 4.0; Score: 88.59 / 100; Rank: 7 / 140</li>
+         <li>I achieved Bachelor of Science majored in Electronics Science and Technology.</li>
+      </ul>
       
       <hr />
       <h3>Recent books I've read and highly recommend</h3>
