--- a/research.html
+++ b/research.html
@@ -227,8 +227,7 @@ correlation by reweighting samples and improve stability of prediction.</p>
     
     
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="./research/extension_final.pdf">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Authors</b>: <b>Nian Liu</b>, Xiao Wang, Hui Han, Chuan Shi <br> <b>Journal</b>: <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
-    <p style="text-align: center;"><img src="./research/model_heco_.PNG" height="250" width="400"></p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold">Hierarchical Contrastive Learning Enhanced Heterogeneous Graph Neural Network</a> <br> <b>Authors</b>: <b>Nian Liu</b>, Xiao Wang, Hui Han, Chuan Shi <br> <b>Journal</b>: <i>IEEE Transactions on Knowledge and Data Engineering</i> <b>(TKDE)</b><br>
     <p style="margin:0"> <b>Overview</b>: This work argues that besides cross-view contrast to capture commonality in HeCo, view-specific 
 information also should be explored by intra-view contrast. </p>
     <p style="margin:0"><button class="accordion">
