--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Nian (Oakley) Liu</title>
+    <title>Si Tang</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -85,10 +85,10 @@
       <header>
         <h1>Nian (Oakley) Liu</h1>
         <p>Master of Computer Science<br>Beijing University of Posts and Telecommunications</p>
-    <h3><a href="https://liun-online.github.io/">Home</a></h3>
-    <h3><a href="https://liun-online.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://liun-online.github.io/research.html">Publications</a></h3>
-        <h3><a href="https://liun-online.github.io/personal.html">Personal</a></h3>
+    <h3><a href="https://tang-si.github.io/">Home</a></h3>
+    <h3><a href="https://tang-si.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://tang-si.github.io/research.html">Publications</a></h3>
+        <h3><a href="https://tang-si.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:oakley.liun@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
@@ -103,7 +103,7 @@
     <p><b>Phone</b>: +86 13041092011</p>
       </header>
       <section>
-      <p style="text-align: center;"><img src="identifications.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></p>
+      <p style="text-align: center;"><img src="identification.jpg" height="250" width="200" alt="Nian (Oakley) Liu"></p>
       <p>I am currently a M.S. in Computer Science in <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. I graduated with a B.S. in Electronics Science and Technology in BUPT in Jun. 2020.</p>
       <p>My research interests include graph neural network, graph self-supervised learning, graph contrastive learning.</p>
       </section>
