--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Nian (Oakley) Liu</h1>
-        <p>Master of Computer Science<br>Beijing University of Posts and Telecommunications</p>
+        <h1>Si Tang</h1>
+        <p>Master of Electronic Science and Technology<br>Beihang University (BUAA)</p>
     <h3><a href="https://tang-si.github.io/">Home</a></h3>
     <h3><a href="https://tang-si.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://tang-si.github.io/research.html">Publications</a></h3>
         <h3><a href="https://tang-si.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:oakley.liun@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=Tx8vRjUAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://github.com/liun-online"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="mailto:tangs0020@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="https://scholar.google.com/citations?hl=en&user=GcARg7oAAAAJ" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
+          <a href="https://tangsi9802.github.io/"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Computer Science<br>Beijing University of Posts and Telecommunications<br>Xitucheng Road 10<br>Beijing haidian district, China</p>
-    <p><b>Post</b>: 100876</p>
-    <p><b>Phone</b>: +86 13041092011</p>
+    <p><b>Contact:</b><br>Department of Electronic Science and Technology<br>Beihang University<br>XueYuan Road No.37, HaiDian District, BeiJing, China</p>
+    <p><b>Post</b>: 100191</p>
+    <p><b>Phone</b>: +86 18810892215</p>
       </header>
       <section>
       <p style="text-align: center;"><img src="identification.jpg" height="250" width="180" alt="Nian (Oakley) Liu"></p>
