--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="social-row">
           <a href="mailto:tangs0020@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?hl=en&user=GcARg7oAAAAJ" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://tangsi9802.github.io/"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="https://github.com/Tangsi9802?tab=repositories"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <br>
         </div>
         <br>
