--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
         <h1>Nian (Oakley) Liu</h1>
         <p>Master of Computer Science<br>Beijing University of Posts and Telecommunications</p>
     <h3><a href="https://liun-online.github.io/">Home</a></h3>
-    <h3><a href="https://liun-online.github.io/research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://liun-online.github.io/research/CVs.pdf">CV</a></h3>  
         <h3><a href="https://liun-online.github.io/research.html">Publications</a></h3>
         <h3><a href="https://liun-online.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
