--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h1>Si Tang</h1>
         <p>Master of Electronic Science and Technology<br>Beihang University (BUAA)</p>
     <h3><a href="https://tang-si.github.io/">Home</a></h3>
-    <h3><a href="https://tang-si.github.io/research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://tang-si.github.io/research/CVs.pdf">CV</a></h3>  
         <h3><a href="https://tang-si.github.io/research.html">Publications</a></h3>
         <h3><a href="https://tang-si.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
