--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       </header>
       <section>
       <p style="text-align: center;"><img src="identification.jpg" height="250" width="180" alt="Si Tang"></p>
-      <p>I am currently a M.S. in Computer Science in <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. I graduated with a B.S. in Electronics Science and Technology in BUPT in Jun. 2020.</p>
-      <p>My research interests include graph neural network, graph self-supervised learning, graph contrastive learning.</p>
+      <p>I am currently a third-year M.S. student in electromagnetic filed and microwave technology in <a href="https://www.buaa.edu.cn/">Beihang University</a>, Beijing, China. And I received the B.E. degree in 2020 from the School of Electronic Engineering, <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. </p>
+      <p>My research interests include phased array calibration and OTA testing.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
