--- a/research.html
+++ b/research.html
@@ -103,44 +103,13 @@
       </header>
       <section>
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2210.02330">Revisiting Graph Contrastive Learning from the Perspective of Graph Spectrum</a> <br> <b>Authors</b>: <b>Nian Liu</b>, Xiao Wang, Deyu Bo, Chuan Shi, Jian Pei<br> <b>Conference</b>: <i>Advances in neural information processing systems</i> <b>(NeurIPS)</b>, 2022<br>
-    <p style="margin:0"><img src="./research/model_spco.PNG" height="200" width="500"></p>
-    <p style="margin:0"> <b>Overview</b>: This is the first attempt to fundamentally explore the augmentation strategies for GCL from spectral 
-domain. We not only reveal the general graph augmentation rule behind different augmentation, but also 
-explain why GCL works by proposing the contrastive invariance theorem. Our work provides deeper 
-understanding on the nature of GCL.</p> 
-    <p style="margin:0"> <b>Code</b>: https://github.com/liun-online/SpCo</p> 
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9334371">Fast Phased Array Calibration Method Based on Multiple Measuring Probes</a> <br> <b>Authors</b>: <b>Si Tang</b>, Zhengpeng Wang<br> <b>Conference</b>: <i>IEEE International Conference on Electronic Information and Communication Technology </i> <b>(ICEICT)</b>, 2020<br>
+    <p style="text-align:center"><img src="./research/ICEICT.png" height="200" width="250"></p>
+    <p style="margin:0"> <b>Overview</b>: </p> 
     <p style="margin:0"><button class="accordion"> 
     Abstract   
     </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
-Graph Contrastive Learning (GCL), learning the node representations by augmenting graphs, has attracted considerable attentions. Despite the proliferation of
-various graph augmentation strategies, some fundamental questions still remain
-unclear: what information is essentially encoded into the learned representations
-by GCL? Are there some general graph augmentation rules behind different augmentations? If so, what are they and what insights can they bring? In this paper,
-we answer these questions by establishing the connection between GCL and graph
-spectrum. By an experimental investigation in spectral domain, we firstly find
-the General grAph augMEntation (GAME) rule for GCL, i.e., the difference of
-the high-frequency parts between two augmented graphs should be larger than
-that of low-frequency parts. This rule reveals the fundamental principle to revisit
-the current graph augmentations and design new effective graph augmentations.
-Then we theoretically prove that GCL is able to learn the invariance information
-by contrastive invariance theorem, together with our GAME rule, for the first
-time, we uncover that the learned representations by GCL essentially encode the
-low-frequency information, which explains why GCL works. Guided by this
-rule, we propose a spectral graph contrastive learning module (SpCo1
-), which is
-a general and GCL-friendly plug-in. We combine it with different existing GCL
-models, and extensive experiments well demonstrate that it can further improve the
-performances of a wide variety of different GCL methods.</p></div>
-    <p style="margin:0"><button class="accordion">
-      Poster
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div>
-    <p style="margin:0"><button class="accordion">
-      Vedio
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Update soon </p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This paper presents a fast phased array calibration method which significantly reduces the number of antennas under test (AUT) amplitude and phase setting states. Multiple measuring probes are introduced to record transmission coefficients as AUT works at different states. A coefficient matrix with a small condition number is constructed to calculate the initial excitation coefficients of each antenna element. Simulation results show that the coefficient matrix condition number can be reduced to 1 by optimizing the geometry of the measurement system. When the signal-to-noise ratio is higher than 18dB, the amplitude error of the calibration result is less than 0.5dB and the phase error is less than 20 degrees in the optimal conditional number configuration. This method effectively reduces the measurement time for the phased array calibration and improves the stability of the calibration system.</p></div><br>
     
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2201.05540">Compact Graph Structure Learning via Mutual Information Compression</a> <br> <b>Authors</b>: <b>Nian Liu</b>, Xiao Wang, Lingfei Wu, Yu Chen, Xiaojie Guo, Chuan Shi<br> <b>Conference</b>: <i>International World Wide Web Conference</i> <b>(TheWebConf)</b>, 2022 <br>
     <p style="margin:0"><img src="./research/model_cogsl.png" height="200" width="500"></p>
