--- a/research.html
+++ b/research.html
@@ -105,6 +105,7 @@
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9334371">Fast Phased Array Calibration Method Based on Multiple Measuring Probes</a> <br> <b>Authors</b>: <b>Si Tang</b>, Zhengpeng Wang<br> <b>Conference</b>: <i>IEEE International Conference on Electronic Information and Communication Technology </i> <b>(ICEICT)</b>, 2020<br>
     <p style="text-align:center"><img src="./research/ICEICT.png" height="200" width="250"></p>
+    <p style="margin:0"><img src="./research/ICEICT1.png" height="200" width="500"></p>
     <p style="margin:0"> <b>Overview</b>: </p> 
     <p style="margin:0"><button class="accordion"> 
     Abstract   
