--- a/research.html
+++ b/research.html
@@ -148,8 +148,8 @@ antenna under test (AUT) and multiple probes, respectively, to validate the effe
     
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Patents</h2>
     <ul style="list-style-type:square">
-         <li>Si Tang, Zhengpeng Wang, 2022. Short-range parallel wireless transmission system and method based on matrix inversion. <br>CN112994768A, filed Feb 5, 2020, and granted Aug 30, 2022.</li>
-         <li>Zhengpeng Wang, Si Tang. 2021. Phased-array antenna phase calibration measurement system and method. <br>CN111987462A, filed Aug 21, 2020, and granted Jun 29, 2021.</li>
+         <li>Si Tang, Zhengpeng Wang, 2022. Short-range parallel wireless transmission system and method based on matrix inversion. <br><i>CN112994768A, filed Feb 5, 2020, and granted Aug 30, 2022.</i></li>
+         <li>Zhengpeng Wang, Si Tang. 2021. Phased-array antenna phase calibration measurement system and method. <br><i>CN111987462A, filed Aug 21, 2020, and granted Jun 29, 2021.</i></li>
          </ul>
         
       </section>
