--- a/personal.html
+++ b/personal.html
@@ -105,20 +105,20 @@
       <h1>Education</h1>
       <p style=style="margin:0"><b>M.S. in  Electronic Science and Technology</b>  (Sep. 2020 – Feb. 2023)<br><i>Beihang University (BUAA)</i></p>
       <ul style="list-style-type:square">
-         <li><i>GPA</i>: 3.54 / 4.0 <b>(Top 20%)</b>| Supervised by Prof. Zhengpeng Wang</li>
-         <li><i>Core Modules</i>: Microwave Engineering, EDA RF integrated circuit, Matrix Theory, Antenna Theory and 
+         <li><u><i>GPA</i></u>: 3.54 / 4.0 <b>(Top 20%)</b>| Supervised by Prof. Zhengpeng Wang</li>
+         <li><u><i>Core Modules</i></u>: Microwave Engineering, EDA RF integrated circuit, Matrix Theory, Antenna Theory and 
 Engineering, Advanced Electromagnetic Theory etc.</li>
-         <li><i>Final Year Thesis</i>: Efficient Amplitude and Phase Calibration for Broadband Phased Array Based on Element 
+         <li><u><i>Final Year Thesis</i></u>: Efficient Amplitude and Phase Calibration for Broadband Phased Array Based on Element 
 Spatial Transmission Matrix
 </li>
       </ul>
       <p style=style="margin:0"><b>B.S. in Opto-electronic Information Science and Engineering</b>  (Sep. 2016 – Jun. 2020)<br><i>Beijing University of Posts and Telecommunications (BUPT)</i></p>
       <ul style="list-style-type:square">
-         <li><i>Core Modules</i>: Telecommunication Principles, Wireless Transmission Technologies and Networking,
+         <li><u><i>Core Modules</i></u>: Telecommunication Principles, Wireless Transmission Technologies and Networking,
 Electromagnetic Fields and Waves, Digital Circuits and Logic Design, Optical Fiber Communications System, 
 Signal and Systems, Probability Theory and Stochastic Processes etc.
 </li>
-         <li><i>Final Year Thesis</i>: MIMO Throughput Measurement for 5G Terminals Based on Over-the-Air Testing
+         <li><u><i>Final Year Thesis</i></u>: MIMO Throughput Measurement for 5G Terminals Based on Over-the-Air Testing
       </ul>
       
       <hr />
